--- a/c.css
+++ b/c.css
@@ -25,8 +25,11 @@
   color: var(--fg);
 }
 html,body {
-  min-height: 100vh;
+  min-height: 100dvh;
+  max-height: 100dvh;
   height: 100dvh;
+  max-width: 100dvw;
+  min-width: 100dvw;
   width: 100dvw;
 }
 @media (prefers-color-scheme: dark) {
@@ -268,6 +271,21 @@ body {
   #left textarea {
     margin-left:auto;
   }
+  #left {
+   position: relative; 
+  }
+  #undo_redo {
+    .disabled {
+      opacity: .5;
+      pointer-events: none;
+    }
+    position: absolute;
+    display: flex;
+    gap: 2ch;
+    font-size: 20px;
+    top: 1ch;
+    right: 1ch;
+  }
   #right #output{
     margin: 0;
   }
@@ -301,6 +319,7 @@ footer{
   display: flex;
   flex-direction: row;
   align-items: center;
+  position: relative;
   justify-content: center;
     text-align: center;
     button {
@@ -319,6 +338,7 @@ footer{
 footer,footer  *{
   font-size: 11px;
 }
+
 #cols{
   padding: 0 0ch;
   gap: 0ch;
@@ -336,6 +356,10 @@ footer,footer  *{
   -ms-user-select: none;
   cursor: default;
 }
+#run {
+  border: var(--border);
+}
+
 #run.active{/* "cmd+enter" triggers this style */
   background-color: var(--fg);
   color: var(--bg);
